--- a/module/english.0.properties
+++ b/module/english.0.properties
@@ -1,8 +1,14 @@
+1=1
+2=2
+3=3
+4=4
+5=5
+A=A
 A_next_ID_has_not_been_entered_please_provide_one=A next ID has not been entered. Please provide one.
 Accuracy=Accuracy
 Alert=Alert
 All=All
-Animal=Animal
+Altitude__masl_=Altitude (masl)
 Animal_1=Animal 1
 Animal_1A=Animal 1A
 Animal_1B=Animal 1B
@@ -24,10 +30,17 @@ Animal_4B=Animal 4B
 Animal_4C=Animal 4C
 Animal_4D=Animal 4D
 Any_unsaved_changes_will_be_lost=Any unsaved changes will be lost
+B=B
+C=C
 Clean_Synced_Files=Clean synced files
+Cloud_Cover=Cloud Cover
 Confirm_Deletion=Confirm Deletion
 Control=Control
-Created_at=Created at
+Count=Count
+Create_New_Location=Create New Location
+Create_Observation=Create Observation
+Created_by=Created by
+D=D
 Delete=Delete
 Delete_Cancelled=Delete cancelled
 Disable_External_GPS=Disable External GPS
@@ -35,27 +48,40 @@ Disable_Internal_GPS=Disable Internal GPS
 Disable_Sync=Disable Sync
 Duplicate=Duplicate
 Duplicated_record=Duplicated record
+E=E
 Easting=Easting
 Enable_External_GPS=Enable External GPS
 Enable_Internal_GPS=Enable Internal GPS
 Enable_Sync=Enable Sync
+End_Observation=End Observation
 Entity_List=Entity List
 Entity_Types=Entity Types
+Existing_Locations=Existing Locations
+Existing_Observation=Existing Observation
 External_GPS_Disabled=External GPS disabled
 External_GPS_Enabled=External GPS enabled
+F=F
 GPS_Diagnostics=GPS Diagnostics
 GPS_Not_Initialised=GPS Not Initialised
 GPS_is_no_longer_initialised=GPS is no longer initialised
 GPS_is_not_initialised=GPS is not initialised
+Habitat=Habitat
 Internal_GPS=Internal GPS
 Internal_GPS_Disabled=Internal GPS disabled
 Internal_GPS_Enabled=Internal GPS enabled
 Latitude=Latitude
+Location=Location
+Location_Created_at=Location Created at
+Location_Name=Location Name
 Login=Login
 Longitude=Longitude
+M=M
 New=New
 New_record_created=New record created
+Next_Survey_ID=Next Survey ID
 Northing=Northing
+Observation=Observation
+Observer_s_Name=Observer's Name
 Photo=Photo
 Please_Enable_Bluetooth=Please enable bluetooth
 Please_enter_data_first=Please enter data first and let a save occur.
@@ -63,19 +89,27 @@ Position=Position
 Press_OK_to_Delete_this_Record=Press OK to delete this record
 Previous_status=Previous status
 Record=Record
-Record_Animal=Record Animal
 Search=Search
 Search_Term=Search Term
-Signup=Signup
+Set_IDs=Set IDs
+Sex=Sex
+Species=Species
+Start_Observation=Start Observation
+Static_data=Static data
+Survey_ID=Survey ID
 Sync_Disabled=Sync disabled
 Sync_Enabled=Sync enabled
 Take_From_GPS=Take From GPS
+Temperature___C_=Temperature (°C)
 The_current_record_has_not_been_saved_yet=The current record has not been saved yet. Press 'OK' to create a new record without waiting for any new data to be saved.
 This_record_is_unsaved_and_cannot_be_duplicated=This record is unsaved and cannot be duplicated
-User=User
+Time_Observation_Ended=Time Observation Ended
+Time_Observation_Started=Time Observation Started
+Unknown=Unknown
 Users=Users
 Validate=Validate
 Warning=Warning
+Wind=Wind
 You_must_save_this_tabgroup_first=You must save this tab group first
 all_fields_contain_valid_data=All fields contain valid data!
 create_dummy_records=Create Dummy Records
