--- a/module/english.0.properties
+++ b/module/english.0.properties
@@ -81,6 +81,7 @@ New_record_created=New record created
 Next_Survey_ID=Next Survey ID
 Northing=Northing
 Observation=Observation
+Observation_Data=Observation Data
 Observer_s_Name=Observer's Name
 Photo=Photo
 Please_Enable_Bluetooth=Please enable bluetooth
@@ -88,7 +89,6 @@ Please_enter_data_first=Please enter data first and let a save occur.
 Position=Position
 Press_OK_to_Delete_this_Record=Press OK to delete this record
 Previous_status=Previous status
-Record=Record
 Search=Search
 Search_Term=Search Term
 Set_IDs=Set IDs
@@ -100,6 +100,7 @@ Survey_ID=Survey ID
 Sync_Disabled=Sync disabled
 Sync_Enabled=Sync enabled
 Take_From_GPS=Take From GPS
+Take_GPS_Coordinates=Take GPS Coordinates
 Temperature___C_=Temperature (°C)
 The_current_record_has_not_been_saved_yet=The current record has not been saved yet. Press 'OK' to create a new record without waiting for any new data to be saved.
 This_record_is_unsaved_and_cannot_be_duplicated=This record is unsaved and cannot be duplicated
